[project]
name = "chatterbox-fastrtc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "chatterbox-tts",
    "fastrtc[stt,tts,vad]>=0.0.25",
    "langchain>=0.3.25",
    "langchain-core>=0.3.63",
    "langchain-ollama>=0.3.3",
    "nltk>=3.9.1",
]

[tool.uv.sources]
chatterbox-tts = { path = "../chatterbox" }
